<resources>
    <string name="app_name">Mintask</string>
    <string name="version">Version: Beta: 0.1</string>

    <string name="title">Mintasks</string>
    <string name="addtitle">Add a new task</string>
    <string name="tasktitle">Title</string>

    <string name="titleHint">Task Title</string>
    <string name="dateTitle">CHOOSE TASK DATE</string>
    <string name="dateButton">Change Date</string>
    <string name="descHint">Description</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="github">App Source Code (Github)</string>

    <string name="edittitle">Edit this task</string>
    <string name="editdatetitle">TASK DATE</string>

    <string name="overview">You have %s tasks to finish.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
