<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edittasklayout"
    android:background="@color/mainBackground"
    tools:context=".addtasks.AddFragment">

    <TextView
        android:id="@+id/edittitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/edittitle"
        android:textColor="@color/mainText"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:hint="@string/titleHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittitle"
        app:boxBackgroundColor="@color/mainBackground"
        android:textColorHint="@color/mainText"
        app:hintTextColor="@color/mainText"
        app:boxStrokeColor="@color/mainText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/taskDateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/editdatetitle"
        android:textColor="@color/mainText"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_date"
        android:drawableTint="@color/mainText"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toTopOf="@id/taskDate"
        app:layout_constraintTop_toBottomOf="@id/titleTextField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/taskDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/mainText"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/descTextField"
        app:layout_constraintTop_toBottomOf="@id/taskDateTitle"
        app:layout_constraintRight_toLeftOf="@id/notificationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="JUNE 9th, 2020" />

    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/mainBackground"
        android:tint="@color/mainText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextField"
        app:layout_constraintBottom_toTopOf="@id/descTextField"
        android:src="@drawable/ic_notifications_none"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:hint="@string/descHint"
        android:textColorHint="@color/mainText"
        app:boxBackgroundColor="@color/mainBackground"
        app:boxStrokeColor="@color/mainText"

        app:hintTextColor="@color/mainText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"/>

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/savebtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:backgroundTint="@color/darkPrimary"
        android:fontFamily="@font/rubik_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelbtn" />

    <Button
        android:id="@+id/cancelbtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textColor="@color/cancelred"
        app:strokeColor="@color/cancelred"
        android:textSize="12sp"
        android:fontFamily="@font/rubik_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/savebtn"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>